add memory pool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,12 @@ set(SOURCE_FILES
         server/threadpool.h
         server/util.c
         server/util.h
-        server/subreactor.c server/subreactor.h server/config.c server/config.h)
+        server/subreactor.c
+        server/subreactor.h
+        server/config.c
+        server/config.h
+        server/mempool.c
+        server/mempool.h)
 
 set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread ")
 add_executable(tinyhttp ${SOURCE_FILES})
