improve code quality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,10 @@ set(SOURCE_FILES
         server/config.c
         server/config.h
         server/mempool.c
-        server/mempool.h)
+        server/mempool.h
+        server/parser.c
+        server/parser.h)
 
-set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread ")
+#set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread")
 add_executable(tinyhttp ${SOURCE_FILES})
 target_link_libraries(tinyhttp event)
